[metadata]
name = dnsdb2
version = 1.1.0
description = Client for DNSDB API version 2 with Flexible Search
long_description = file: README.md
long_description_content_type = text/markdown
author = Farsight Security, Inc.
author_email = support@farsightsecurity.com
license = Apache 2.0
classifiers =
    License :: OSI Approved :: Apache 2.0
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
packages = dnsdb2
install_requires =
    requests
    importlib; python_version <= "3.7"
zip_safe = True

[options.extras_require]
test =
    requests-mock
